feat: let backend and db support vendors
